--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "metalsmith"
+    "build": "metalsmith",
+    "build-demo": "rollup -c",
+    "build-all": "npm run build && npm run build-demo"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "glsl-easings": "^1.0.0",
+    "glsl-noise": "0.0.0",
     "jstransformer-handlebars": "^1.1.0",
     "metalsmith": "^2.3.0",
     "metalsmith-date-formatter": "^1.0.2",
@@ -17,6 +21,16 @@
     "metalsmith-markdown": "^0.2.2",
     "metalsmith-perma": "^1.0.0",
     "metalsmith-permalinks": "^0.5.0",
-    "metalsmith-templates": "^0.7.0"
+    "metalsmith-templates": "^0.7.0",
+    "rollup": "^0.50.0",
+    "rollup-plugin-cleanup": "^1.0.1",
+    "rollup-plugin-commonjs": "^8.2.1",
+    "rollup-plugin-glslify": "^1.0.4",
+    "rollup-plugin-node-resolve": "^3.0.0"
+  },
+  "dependencies": {
+    "@jsantell/three-app": "^1.0.0",
+    "glsl-solid-wireframe": "^1.0.1",
+    "three": "^0.92.0"
   }
 }
