--- a/package.json
+++ b/package.json
@@ -13,15 +13,9 @@
   "devDependencies": {
     "glsl-easings": "^1.0.0",
     "glsl-noise": "0.0.0",
-    "jstransformer-handlebars": "^1.1.0",
-    "metalsmith": "^2.3.0",
-    "metalsmith-date-formatter": "^1.0.2",
-    "metalsmith-drafts": "0.0.1",
-    "metalsmith-layouts": "^2.1.0",
-    "metalsmith-markdown": "^0.2.2",
-    "metalsmith-perma": "^1.0.0",
-    "metalsmith-permalinks": "^0.5.0",
-    "metalsmith-templates": "^0.7.0",
+    "handlebars": "^4.0.11",
+    "js-yaml": "^3.11.0",
+    "moment": "^2.22.1",
     "rollup": "^0.50.0",
     "rollup-plugin-cleanup": "^1.0.1",
     "rollup-plugin-commonjs": "^8.2.1",
