--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "handlebars": "^4.0.11",
     "js-yaml": "^3.11.0",
     "moment": "^2.22.1",
+    "parse-domain": "^2.0.0",
     "rollup": "^0.50.0",
     "rollup-plugin-cleanup": "^1.0.1",
     "rollup-plugin-commonjs": "^8.2.1",
     "rollup-plugin-glslify": "^1.0.4",
-    "rollup-plugin-node-resolve": "^3.0.0"
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "showdown": "^1.8.6"
   },
   "dependencies": {
     "@jsantell/three-app": "^1.0.0",
