s/magic leap/leap motion/g

--- a/content/006.yaml
+++ b/content/006.yaml
@@ -43,7 +43,7 @@ links:
     category:
       - design
     content: >
-      [Magic Leap] shares the results of their challenge of designing an application for someone who has never used a VR headset, with no instructions whatsoever, focusing on UX for hand tracking.
+      [Leap Motion] shares the results of their challenge of designing an application for someone who has never used a VR headset, with no instructions whatsoever, focusing on UX for hand tracking.
 
 
   - title: "Brandon Jones' #XRSummer"
